navbar: fix https://github.com/rabuzarus/frio/issues/1 - friendica logo isn't visible in firefox we now use for ff a svg mask - thanks to pollygeek

--- a/css/style.css
+++ b/css/style.css
@@ -199,8 +199,8 @@ header #banner {
 }
 header #banner #logo-img, 
 .navbar-brand #logo-img {
-    mask: url('img/friendica-logo.svg#logo_mask');
-    mask-image: url('img/friendica-25.png');
+    /*mask: url('network#m1');*/
+    /*mask-image: url('img/friendica-25.png');*/
     -webkit-mask-image: url('img/friendica-25.png');
     background-color: $nav_icon_color;
     height: 25px;
@@ -208,6 +208,7 @@ header #banner #logo-img,
     margin-left: auto;
     margin-right: auto;
 }
+
 #navbrand-container {
     display: flex;
 }
